parser.py
from tokens.token import TokenType, Token
from error import SyntaxError
import parser_objects


class Parser:
    def __init__(self, tokens):
        self.tokens = tokens
        self.current_token = -1
        self.tree = self.create_tree()

    # get next token from token list
    def get_token(self):
        self.current_token += 1
        return self.tokens[self.current_token]

    # compare token with expected token
    def compare_tokens(self, token, type, msg=""):
        if token.token_type != type:
            raise SyntaxError(token, msg)

    # get all token parsed and return AST
    def create_tree(self):
        model_description, model_content = self.parse_model()
        model = parser_objects.Model(model_content[0], model_content[1], model_content[2],
                                     model_content[3], model_description[0], model_description[1])
        return model

    # parse all tokens
    def parse_model(self):
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_LEFT_BRACKET, "Model does not start with '<'")
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_UML_MODEL, "Model not defined")

        model_description = self.parse_model_description()  # [id, name]

        token = self.get_token()
        self.compare_tokens(token, TokenType.T_RIGHT_BRACKET, "Model description does not end with '>'")

        model_content = self.parse_model_content()  # [file_description, imports, elements, profiles]

        self.parse_model_end()
        return model_description, model_content

    # parse model description
    # model description = 'xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI"
    # xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" ,
    # ['xmlns:notation="http://www.eclipse.org/gmf/runtime/1.0.2/notation"'] ,
    # xmlns:uml="http://www.eclipse.org/uml2/3.0.0/UML" xmlns:umlnotation="http://www.ibm.com/xtools/1.5.3/Umlnotation"
    # xmi:id=', string value, ' name=', string value;
    def parse_model_description(self):
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMI_VERSION)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMLNS_XMI)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMLNS_XSI)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMLNS_ECORE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        token = self.get_token()
        if token.token_type == TokenType.T_XMLNS_NOTATION:
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_EQUALS)
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_STRING_VALUE)
            token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMLNS_UML)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMLNS_UML_NOTATION)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMI_ID)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        # model id
        id = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_NAME)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        # model name
        name = token.value
        return [id, name]

    # parse everything after model description
    # model contents = file description,{ package import },{ packaged element },{ profile application };
    def parse_model_content(self):
        file_description = self.parse_file_description()
        imports = []
        pckg_import = self.parse_package_import()
        while pckg_import != None:
            imports.append(pckg_import)
            pckg_import = self.parse_package_import()

        elements = []
        pckg_element = self.parse_packaged_element()
        while pckg_element != None:
            elements.append(pckg_element)
            pckg_element = self.parse_packaged_element()

        profiles = []
        profile_application = self.parse_profile_application()
        while profile_application != None:
            profiles.append(profile_application)
            profile_application = self.parse_profile_application()

        return [file_description, imports, elements, profiles]

    # file description = "<eAnnotations xmi:id=", string value, 'source="uml2.diagrams"', ['references=', string value]
    # ,'>', file name, "</eAnnotations>";
    def parse_file_description(self):
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EANNOTATIONS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMI_ID)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        id = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_SOURCE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        source = token.value
        token = self.get_token()
        if token.token_type == TokenType.T_REFERENCES:
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_EQUALS)
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_STRING_VALUE)
            token = self.get_token()
        self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)

        graphics = self.parse_file_name()

        file_description = parser_objects.FileDescription(graphics.graphic, id, source)
        return file_description

    # file name = "<contents xmi:type="umlnotation:UMLDiagram" xmi:id=", string value, ' type="Class" name=',
    # string value, ">", graphic description, "</contents>";
    def parse_file_name(self):
        token = self.get_token()
        graphics = parser_objects.GraphicDescription()
        while type(token) is not Token:
            # skip graphic description
            # append all tokens to GraphicDescription class
            graphics.graphic.append(token)
            token = self.get_token()
        self.current_token -= 1
        return graphics

    # package import = "<packageImport xmi:id=", id, ">", package, "</packageImport>";
    def parse_package_import(self):
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
        token = self.get_token()

        if token.token_type == TokenType.T_PACKAGED_ELEMENT:
            self.current_token -= 2
            return None

        self.compare_tokens(token, TokenType.T_PACKAGE_IMPORT)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMI_ID)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        id = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)

        type, href = self.parse_package()

        token = self.get_token()
        self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_SLASH)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_PACKAGE_IMPORT)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)
        package = parser_objects.ImportedPackage(id, type, href)
        return package

    # package = '<importedPackage xmi:type="uml:Model" href=', string value, "/>";
    def parse_package(self):
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_IMPORTED_PACKAGE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMI_TYPE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        type = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_HREF)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        href = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_SLASH)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)
        return type, href

    # packaged element = "<packagedElement xmi:type=", ( class | association ), "</packagedElement>";
    def parse_packaged_element(self):
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
        token = self.get_token()

        if token.token_type != TokenType.T_PACKAGED_ELEMENT:
            self.current_token -= 2
            return None

        self.compare_tokens(token, TokenType.T_PACKAGED_ELEMENT)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMI_TYPE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        if token.value == '"uml:Class"':
            return self.parse_class()
        elif token.value == '"uml:Association"':
            return self.parse_association()
        else:
            raise SyntaxError(token, "Unrecognised packaged element, xmi:type expected: uml:Class or uml:Association")

    # class = '"uml:Class" xmi:id=', string value, " name=", string value, visibility, ['isLeaf="true"'],
    # ['isAbstract="true"'], ">", [ stereotype ], [ generalization ], {attribute}, {operation};
    def parse_class(self):
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMI_ID)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        id = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_NAME)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        name = token.value

        visibility = self.parse_visibility()
        is_abstract = '"false"'
        is_leaf = '"false"'
        token = self.get_token()
        if token.token_type != TokenType.T_RIGHT_BRACKET or token.token_type != TokenType.T_SLASH:
            while token.token_type == TokenType.T_IS_LEAF or token.token_type == TokenType.T_IS_ABSTRACT:
                option_type = token.token_type
                token = self.get_token()
                self.compare_tokens(token, TokenType.T_EQUALS)
                token = self.get_token()
                self.compare_tokens(token, TokenType.T_STRING_VALUE)
                if token.value != '"true"' and token.value != '"false"':
                    raise SyntaxError(token, "Unexpected value, expected true or false value")
                else:
                    if option_type == TokenType.T_IS_LEAF:
                        is_leaf = token.value
                    elif option_type == TokenType.T_IS_ABSTRACT:
                        is_abstract = token.value
                    token = self.get_token()
        if token.token_type == TokenType.T_SLASH:
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)
            parsed_class = parser_objects.Class(id, name, visibility, is_leaf, is_abstract, None, [], [], [])
            return parsed_class
        self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)
        stereotype = self.parse_stereotype()
        generalizations = []
        generalization = self.parse_generalization()
        while generalization != None:
            generalizations.append(generalization)
            generalization = self.parse_generalization()
        attributes = []
        attribute = self.parse_attribute()
        while attribute != None:
            attributes.append(attribute)
            attribute = self.parse_attribute()
        operations = []
        operation = self.parse_operation()
        while operation != None:
            operations.append(operation)
            operation = self.parse_operation()
        self.parse_packaged_element_end()
        parsed_class = parser_objects.Class(id, name, visibility, is_leaf, is_abstract, stereotype, generalizations, attributes, operations)
        return parsed_class

    # visibility = " visibility=", visibility type;
    # visibility type = "public" | "private" | "protected" | "package";
    def parse_visibility(self):
        token = self.get_token()
        if token.token_type != TokenType.T_VISIBILITY:
            self.current_token -= 1
            return '"public"'
        self.compare_tokens(token, TokenType.T_VISIBILITY)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        if token.value == '"public"' or token.value == '"private"' or token.value == '"protected"' \
                or token.value == '"package"':
            return token.value
        else:
            raise SyntaxError(token, "Unexpected visibility")

    # stereotype = "<eAnnotations xmi:id=", string value, " source=", string value, ">", stereotype description,
    #               {stereotype description}, "</eAnnotations>";
    def parse_stereotype(self):
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
        token = self.get_token()
        if token.token_type != TokenType.T_EANNOTATIONS:
            self.current_token -= 2
            return None
        self.compare_tokens(token, TokenType.T_EANNOTATIONS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMI_ID)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        id = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_SOURCE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        source = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)
        stereotypes = []
        stereotype = self.parse_stereotype_description()
        while stereotype != None:
            stereotypes.append(stereotype)
            stereotype = self.parse_stereotype_description()
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_SLASH)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EANNOTATIONS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)
        stereotypes_obj = parser_objects.Stereotype(id, source, stereotypes)
        return stereotypes_obj

    # stereotype description = "<details xmi:id=", string value, " key=", string value, "/>";
    def parse_stereotype_description(self):
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
        token = self.get_token()
        if token.token_type != TokenType.T_DETAILS:
            self.current_token -= 2
            return None
        self.compare_tokens(token, TokenType.T_DETAILS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMI_ID)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        id = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_KEY)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        key = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_SLASH)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)
        return [id, key]

    # generalization = "<generalization xmi:id=", string value, " general=", string value, "/>";
    def parse_generalization(self):
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
        token = self.get_token()
        if token.token_type != TokenType.T_GENERALIZATION:
            self.current_token -= 2
            return None
        self.compare_tokens(token, TokenType.T_GENERALIZATION)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMI_ID)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        id = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_GENERAL)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        general = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_SLASH)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)
        generalization = parser_objects.Generalization(id, general)
        return generalization

    # attribute = "<ownedAttribute xmi:id=", string value, " name=", string value, attribute parameters,
    #           ( "/>" | attribute description );
    # attribute description = ">", [type], [limit], [default value], "</ownedAttribute>";
    def parse_attribute(self):
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
        token = self.get_token()
        if token.token_type != TokenType.T_OWNED_ATTRIBUTE:
            self.current_token -= 2
            return None
        self.compare_tokens(token, TokenType.T_OWNED_ATTRIBUTE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMI_ID)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        id = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_NAME)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        name = token.value
        parameters = self.parse_attribute_parameters()
        token = self.get_token()
        if token.token_type == TokenType.T_SLASH:
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)
            attribute = parser_objects.Attribute(id, name, parameters, None, None, None, None)
            return attribute
        elif token.token_type == TokenType.T_RIGHT_BRACKET:
            type = self.parse_type()
            upper_limit = self.parse_upper_limit()
            lower_limit = self.parse_lower_limit()
            default_value = self.parse_default_value()
            if type is None and default_value[1] is not None:
                type = default_value[1]
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_SLASH)
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_OWNED_ATTRIBUTE)
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)
            attribute = parser_objects.Attribute(id, name, parameters, type, upper_limit, lower_limit, default_value[0])
            return attribute
        else:
            raise SyntaxError(token, "Unexpected OwnedAttribute ending, expected '/' or '>'")

    # type = "<type xmi:type=", string value, "href=", string value,"/>";
    def parse_type(self):
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
        token = self.get_token()
        if token.token_type != TokenType.T_TYPE:
            self.current_token -= 2
            return None
        self.compare_tokens(token, TokenType.T_TYPE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMI_TYPE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        type = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_HREF)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        href = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_SLASH)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)
        return type, href

    # default value = "<defaultValue xmi:type=", string value, " xmi:id=", string value, " value=", string value,
    # ( default value type | "/>" );
    # default value type = type, "</defaultValue>";
    def parse_default_value(self):
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
        token = self.get_token()
        if token.token_type != TokenType.T_DEFAULT_VALUE:
            self.current_token -= 2
            return [None, None]
        self.compare_tokens(token, TokenType.T_DEFAULT_VALUE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMI_TYPE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        type = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMI_ID)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        id = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_VALUE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        value = token.value
        token = self.get_token()
        default_type = None
        if token.token_type != TokenType.T_SLASH:
            self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)
            default_type = self.parse_type()
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_SLASH)
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_DEFAULT_VALUE)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)
        default_value = parser_objects.Limit(type, id, value)
        return [default_value, default_type]

    # attribute parameters = visibility, ['isLeaf="true"'], ['isStatic="true"'], ['isOrdered="true"'],
    # ['isReadOnly="true"'], ['isDerived="true"'], ['isDerivedUnion="true"'], [short type], [association type];
    # association type = [ 'aggregation="composite"' | 'aggregation="shared"' ], "association=", string value;
    def parse_attribute_parameters(self):
        visibility = self.parse_visibility()
        token = self.get_token()
        aggregation = None
        association = None
        type = None
        options = ['"false"', '"false"', '"false"', '"true"', '"false"', '"false"', '"false"']
        if token.token_type != TokenType.T_RIGHT_BRACKET and token.token_type != TokenType.T_SLASH:
            while token.token_type == TokenType.T_IS_LEAF or token.token_type == TokenType.T_IS_STATIC \
                    or token.token_type == TokenType.T_IS_ORDERED or token.token_type == TokenType.T_IS_READ_ONLY \
                    or token.token_type == TokenType.T_IS_DERIVED or token.token_type == TokenType.T_IS_DERIVED_UNION \
                    or token.token_type == TokenType.T_IS_UNIQUE:
                type = token.token_type
                token = self.get_token()
                self.compare_tokens(token, TokenType.T_EQUALS)
                token = self.get_token()
                self.compare_tokens(token, TokenType.T_STRING_VALUE)
                if type == TokenType.T_IS_LEAF:
                    options[0] = token.value
                elif type == TokenType.T_IS_STATIC:
                    options[1] = token.value
                elif type == TokenType.T_IS_ORDERED:
                    options[2] = token.value
                elif type == TokenType.T_IS_UNIQUE:
                    options[3] = token.value
                elif type == TokenType.T_IS_READ_ONLY:
                    options[4] = token.value
                elif type == TokenType.T_IS_DERIVED:
                    options[5] = token.value
                elif type == TokenType.T_IS_DERIVED_UNION:
                    options[6] = token.value
                type = None
                token = self.get_token()
            if token.token_type == TokenType.T_TYPE:
                token = self.get_token()
                self.compare_tokens(token, TokenType.T_EQUALS)
                token = self.get_token()
                self.compare_tokens(token, TokenType.T_STRING_VALUE)
                type = token.value
                token = self.get_token()
            if token.token_type == TokenType.T_AGGREGATION:
                token = self.get_token()
                self.compare_tokens(token, TokenType.T_EQUALS)
                token = self.get_token()
                self.compare_tokens(token, TokenType.T_STRING_VALUE)
                aggregation = token.value
                token = self.get_token()
            if token.token_type == TokenType.T_ASSOCIATION:
                token = self.get_token()
                self.compare_tokens(token, TokenType.T_EQUALS)
                token = self.get_token()
                self.compare_tokens(token, TokenType.T_STRING_VALUE)
                association = token.value
                token = self.get_token()

        self.current_token -= 1
        parameters = parser_objects.AttributeParameters(visibility, options[0], options[1], options[2], options[3], options[4], options[5], options[6], aggregation, association, type)
        return parameters

    # operation = "<ownedOperation xmi:id=", string value, " name=", string value, [ operation parameters ],
    #           ("/>" | parameter );
    def parse_operation(self):
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
        token = self.get_token()
        if token.token_type != TokenType.T_OWNED_OPERATION:
            self.current_token -= 2
            return None
        self.compare_tokens(token, TokenType.T_OWNED_OPERATION)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_XMI_ID)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        id = token.value
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_NAME)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_EQUALS)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_STRING_VALUE)
        name = token.value
        parameters = self.parse_operation_parameters()
        token = self.get_token()
        owned_parameters = []
        if token.token_type != TokenType.T_SLASH:
            owned_parameter = self.parse_owned_parameter()
            while owned_parameter != None:
                owned_parameters.append(owned_parameter)
                owned_parameter = self.parse_owned_parameter()
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_LEFT_BRACKET)
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_SLASH)
            token = self.get_token()
            self.compare_tokens(token, TokenType.T_OWNED_OPERATION)
        token = self.get_token()
        self.compare_tokens(token, TokenType.T_RIGHT_BRACKET)
        operation = parser_objects.Operation(id, name, parameters[0], parameters[1], parameters[2], parameters[3], parameters[4], owned_parameters)
        return operation
